<resources>
    <string name="app_name">Eat Carefully</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="hello">Hello World, MainActivity!</string>
    <string name="hintTxtItem">Enter an item here ...</string>
    <string name="lblBtnAdd">Add Item</string>
    <string name="txtEmpty">List is empty</string>
    <string name="lblBtnDel">Delete Selected Items</string>
    <string name="BarcodenotFound">No Barcode Found</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="checkout">Checkout</string>
    <string name="hint">hint</string>
    <string name="search">Search</string>
    <string name="scan">Scan</string>
    <string name="name">Name</string>
    <string name="todo">TODO</string>
    <string name="add_to_cart">Add to Cart</string>
</resources>
