<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cart"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CartFragment"
    android:orientation="vertical">

    <EditText
        android:id="@+id/txtItemCart"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/hintTxtItem"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/btnAddCart"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblBtnAdd"
        android:layout_toEndOf="@id/txtItemCart"
        />

    <TextView
        android:id="@android:id/empty"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtItemCart"
        android:text="@string/txtEmpty"
        android:gravity="center_horizontal"
        />

    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtItemCart"
        android:choiceMode="multipleChoice" >
    </ListView>

    <Button
        android:id="@+id/btnDelCart"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/lblBtnDel" />

    <Button
        android:id="@+id/btnRestore"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_toEndOf="@+id/btnDelCart"
        android:text="@string/checkout" />

</RelativeLayout>
